# humanoid

./: .gitignore  README.md  log.md
RL_training/Isaac_RL/: README.md  check_initial_pose.py  check_pose.py  demo_pick_brick.py  eval_policy.py  package-lock.json  requirements.txt  test_import_urdf.py  train_ppo.py
RL_training/Isaac_RL/rl_train/: __init__.py  brick_pick_demo_support.py  callbacks.py  check_initial_pose.py  check_pose.py  config.py  demo_pick_brick.py  env.py  eval_policy.py  isaac_import.py  pose_math.py  test_import_urdf.py  train_ppo.py
RL_training/Mujoco_RL/: README.md  requirements.txt
RL_training/Mujoco_RL/assets/: humanoid_right_arm.xml  pick_brick_scene.xml
RL_training/Mujoco_RL/envs/: __init__.py  pick_brick_env.py
RL_training/Mujoco_RL/eval/: play_policy.py
RL_training/Mujoco_RL/robot_description/meshes/: head_camera_link.STL  left_gripper1_link.STL  left_gripper2_link.STL  left_wrist_pitch_link.STL  neck_pitch_link.STL  right_wrist_yaw_link.STL
RL_training/Mujoco_RL/robot_description/urdf/: humanoid.gazebo.ros2_control.xacro  humanoid.ros2_control.xacro  humanoid.urdf
RL_training/Mujoco_RL/scripts/: setup_conda_env.sh  verify_install.sh
RL_training/Mujoco_RL/train/: train_ppo.py
RL_training/Mujoco_RL/utils/: build_mjcf.py  inspect_robot.py
docs/: README.md  RL_training.md  imitation_dataset_format.md  imitation_pipeline_audit.md  imitation_quickstart.md  keyboard_control_README.md  robot_commander_README.md  中期检查报告.md  伺服控制说明.md  手眼标定说明.md
src/camera_calibration/: package.xml  setup.py
src/camera_calibration/camera_calibration/nodes/: end_effector_pose_publisher.py  handeye_calibration.py
src/camera_calibration/config/: head_cam_handeye_calibration.yaml  left_cam_handeye_calibration.yaml  right_cam_handeye_calibration.yaml
src/camera_calibration/launch/: aruco_detection.launch.py  end_pose_publisher.launch.py  handeye_calibration.launch.py  start.launch.py
src/robot_commander/: CMakeLists.txt  move_to_named_target.md
src/robot_commander/launch/: robot_moveit.launch.xml
src/robot_commander/src/: commander_node.cpp  move_to_named_target_node.cpp
src/robot_description/config/: initial_positions.yaml  ros2_controllers.yaml
src/robot_description/meshes/: head_camera_link.STL  left_elbow_pitch_link.STL  left_gripper2_link.STL  left_wrist_pitch_link.STL  left_wrist_yaw_link.STL  neck_yaw_link.STL  right_camera_link.STL
src/robot_description/robot_commander/: CMakeLists.txt  package.xml
src/robot_description/robot_commander/launch/: setting.rviz
src/robot_description/robot_commander/src/: commander_node.cpp  move_to_pose_init_node.cpp
src/robot_description/urdf/: humanoid.gazebo.xacro  humanoid.ros2_control.xacro  humanoid.simulation.ros2_control.xacro  humanoid.urdf  humanoid.urdf.xacro
src/robot_hardware/: CMakeLists.txt  robot_hardware_interface.xml
src/robot_hardware/include/robot_hardware/: canfd_driver.hpp  motor_manager.hpp  motor_protocol.hpp  robot_hardware_interface.hpp  sim_robot_hardware_interface.hpp
src/robot_hardware/src/: robot_hardware_interface.cpp  sim_robot_hardware_interface.cpp
src/robot_imitation_pipeline/: package.xml  setup.cfg  setup.py
src/robot_imitation_pipeline/config/: recording.yaml  replay.yaml  training.yaml
src/robot_imitation_pipeline/launch/: demo_recorder.launch.py
src/robot_imitation_pipeline/robot_imitation_pipeline/: __init__.py  convert_to_hdf5.py  demo_control.py  io_utils.py  replay_demo.py  train_bc.py  validate_demo.py
src/robot_imitation_pipeline/robot_imitation_pipeline/nodes/: __init__.py  demo_recorder_node.py
src/robot_keyboard_control/: package.xml  setup.cfg  setup.py
src/robot_keyboard_control/robot_keyboard_control/: cartesian_keyboard_control.py  joint_keyboard_control.py
src/robot_moveit_config/config/: humanoid.ros2_control.xacro  humanoid.srdf  humanoid.urdf.xacro  kinematics.yaml
src/robot_moveit_config/launch/: move_group.launch.py
src/robot_moveit_config/robot_description/: CMakeLists.txt  package.xml
src/robot_rl_training/: README.md  package.xml  setup.cfg  setup.py
src/robot_rl_training/launch/: isaac_rl_training.launch.py
src/robot_rl_training/resource/: robot_rl_training
src/robot_rl_training/robot_rl_training/: __init__.py  callbacks.py  config.py  env.py  eval_policy.py  isaac_scene.py  ros2_interface.py  train_ppo.py
src/robot_servo_control/: package.xml  setup.cfg  setup.py
src/robot_servo_control/config/: head_servo.yaml  left_arm_servo.yaml  right_arm_servo.yaml
src/robot_servo_control/launch/: dual_arm_servo.launch.py  servo_control.launch.py  unity_control.launch.py
src/robot_servo_control/test/: servo.launch.py
src/robot_simulation/: setup.py
src/robot_simulation/config/: calibration_sim_config.yaml  default_sim_config.yaml  joint_names_humanoid.yaml  visual_servoing_sim_config.yaml
src/robot_simulation/launch/: aruco_detection.launch.py  calibration.launch.py  chessboard_detector.launch.py  gazebo.launch.py  handeye_calibration.launch.py  pose_publisher.launch.py  simulation.launch.py  visual_servoing.launch.py
src/robot_simulation/rviz/: simulation.rviz
src/robot_simulation/worlds/: calibration.sdf  empty.sdf  visual_servoing.sdf
src/robot_workspace_quality_analyzer/: CMakeLists.txt  README.md  package.xml
src/robot_workspace_quality_analyzer/config/: workspace_quality_analyzer.yaml
src/robot_workspace_quality_analyzer/launch/: workspace_quality_analyzer.launch.py
src/robot_workspace_quality_analyzer/src/: workspace_quality_analyzer_node.cpp
src/robot_workspace_quality_analyzer/srv/: AnalyzeOrientation.srv  AnalyzeWorkspace.srv
src/servo_control/: package.xml  setup.py
src/servo_control/config/: moveit_servo_config.yaml
src/servo_control/launch/: servo.launch.py
src/servo_control/test/: servo.launch.py
unity/: ros_tcp_unity_setup_guide.md
unity/Spricts/: DualXRServo.cs  PoseCubeGenerator.cs  Unity_Teleop_Design_Summary.md
unity/docs/: 说明.md
workspace/: build_robot.m  fk_dh.m  ik_numeric.m  main.m  plot_robot_pose.m  trajectory_test.m  workspace_analysis.m
(+51 files in other folders)
