<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_rl_training</name>
  <version>0.1.0</version>
  <description>Isaac Sim PPO training package for humanoid brick grasping.</description>
  <maintainer email="arthur@example.com">arthur</maintainer>
  <license>Apache-2.0</license>

  <depend>robot_description</depend>
  <depend>robot_moveit_config</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
